bug 1789705: fix breaks in report view stack table
This fixes the breaks in the report view stack table so that long
sources and long function signatures don't make the table impossible to
read.

It also applies widths to the columns to make table layout more stable
across multiple stacks.

--- a/webapp-django/crashstats/crashstats/static/crashstats/css/base.less
+++ b/webapp-django/crashstats/crashstats/static/crashstats/css/base.less
@@ -72,6 +72,43 @@ time {
     display: inline-block;
 }
 
+.w-1\/12 {
+    width: 8.3333%;
+}
+.w-2\/12 {
+    width: 16.6667%;
+}
+.w-3\/12 {
+    width: 25%;
+}
+.w-4\/12 {
+    width: 33.3333%;
+}
+.w-5\/12 {
+    width: 41.6667%;
+}
+.w-6\/12 {
+    width: 50%;
+}
+.w-7\/12 {
+    width: 58.3333%;
+}
+.w-8\/12 {
+    width: 66.6667%;
+}
+.w-9\/12 {
+    width: 75%;
+}
+.w-10\/12 {
+    width: 83.3333%;
+}
+.w-11\/12 {
+    width: 91.666667%;
+}
+.w-full {
+    width: 100%;
+}
+
 #mainbody {
     position: relative;
     margin: 1em 2em;
